Adjust back-end view scripts due to the modification's back-end layout

--- a/src/app/views/auth/changePassword.jade
+++ b/src/app/views/auth/changePassword.jade
@@ -1,9 +1,9 @@
 extends ../layouts/backend
 
-block content
-    div.page-header
-        h2 Change password
+block heading
+    h1 Change password
 
+block content
     div.col-lg-8.col-lg-offset-2
         include ../partial/flash
 
@@ -25,7 +25,7 @@ block content
 
             div.form-group
                 div.col-lg-9.col-lg-offset-3
-                    button.btn.btn-primary(type="submit") Save
+                    button.btn.btn-primary.btn-lg(type="submit") Save
 
 block footerScript
     script(type="text/javascript", src="/vendor/bootstrapvalidator/js/bootstrapValidator.min.js")
