Fix sign out URL

--- a/src/app/views/layouts/backend.jade
+++ b/src/app/views/layouts/backend.jade
@@ -55,7 +55,7 @@ html
                                 a(href="#{frontEndUrl}", data-toggle="tooltip", data-container="body", data-placement="bottom", data-title="Visit demo website")
                                     i.fa.fa-home
                             li
-                                a(href="#{frontEndUrl}", data-toggle="tooltip", data-container="body", data-placement="bottom", data-title="Sign out")
+                                a(href="/admin/signout", data-toggle="tooltip", data-container="body", data-placement="bottom", data-title="Sign out")
                                     i.fa.fa-sign-out
 
                         p.navbar-text.navbar-right
